crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__variable__in_middle_of_block.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/in_middle_of_block.lox
---
success: true
exit_code: 0
----- stdout -----
a
a b
a c
a b d

----- stderr -----
