crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__variable__shadow_global.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/shadow_global.lox
---
success: true
exit_code: 0
----- stdout -----
shadow
global

----- stderr -----
